# cpplab

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt
.cache/clangd/index/: algorithms.hpp.861B338FAAED8798.idx  common.hpp.CAEA9DCDF65815F6.idx  doctest.h.E8C2428D86251A4E.idx  example.cpp.0DB8B8D1E4CE676B.idx  knapply.hpp.BF01EAE3FD23E022.idx  main.cpp.E672EB4866F73403.idx  portability.hpp.C72216B636A9330C.idx  stl-compat.hpp.299D99A7C43D2D58.idx  text.hpp.5E7008F6BB445BA8.idx
.github/workflows/: ci.yml  clang.yml  gcc.yml  install.yml  macos.yml  mingw.yml  ubuntu.yml  windows.yml
Testing/: TAG
Testing/20200820-1756/: Test.xml
bench/: bench  bench.cpp  bench.csv
include/: knapply.hpp
include/knapply/: algorithms.hpp  common.hpp  portability.hpp  stl-compat.hpp  str.hpp  text.hpp  txt.hpp
test/: CMakeLists.txt
test/source/: example.cpp  main.cpp  test_str.cpp  test_txt.cpp
